plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    runtimeOnly 'mysql:mysql-connector-java:8.0.29'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
    //implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'com.auth0:java-jwt:3.10.3'
    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation 'org.apache.httpcomponents:httpcore:4.4.12'
    implementation 'cn.hutool:hutool-all:5.7.20'
    // Fastjson库，用于JSON处理
    implementation 'com.alibaba:fastjson:1.2.83'
}

tasks.named('test') {
    useJUnitPlatform()
}
